server: add ping endpoint

--- a/server/appsettings.Development.json
+++ b/server/appsettings.Development.json
@@ -5,14 +5,13 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-
     "AllowedHosts": "*",
     "Jwt": {
-        "Key": "", // https://www.random.org/strings
-        "Issuer": "http://localhost:80",
-        "Audience": "http://localhost:80"
+        "Key": "samplekey3EXC8Z1G2", // https://www.random.org/strings
+        "Issuer": "https://localhost:44381/",
+        "Audience": "https://localhost:44381/"
     },
     "ConnectionStrings": {
-        "default": ""
+        "default": "server=localhost;user=root;password=;database=tasksdb"
     }
 }
